@@ -1,38 +1,115 @@
 package school.sptech;
 
 import org.apache.poi.ss.usermodel.*;
+import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+
 import java.text.Normalizer;
 import java.util.*;
+import java.util.function.Consumer;
 
 public class LeitorExcell {
 
+    // Nomes canônicos esperados pelo domínio
     private static final Set<String> COLS_ESPERADAS = Set.of(
-            "estado","mes","ano",
-            "qtdaeroportos","numvoosregulares","numvoosirregulares",
-            "numembarques","numdesembarques","numvoostotais"
+            "estado", "mes", "ano",
+            "qtdaeroportos", "numvoosregulares", "numvoosirregulares",
+            "numembarques", "numdesembarques", "numvoostotais"
     );
+
+    // Sinônimos -> canônico (tudo já normalizado)
+    private static final Map<String, String> ALIASES;
+    static {
+        Map<String, String> m = new HashMap<>();
+        // estado
+        m.put("estado", "estado");
+        // mês
+        m.put("mes", "mes");
+        // ano
+        m.put("ano", "ano");
+
+        // qtd aeroportos
+        m.put("qtdaeroportos", "qtdaeroportos");
+        m.put("qtddeaeroportos", "qtdaeroportos");
+        m.put("qtd_aeroportos", "qtdaeroportos");
+        m.put("qtdaeroporto", "qtdaeroportos");
+        m.put("numerodeaeroportos", "qtdaeroportos");
+
+        // voos regulares
+        m.put("numvoosregulares", "numvoosregulares");
+        m.put("voosregulares", "numvoosregulares");
+        m.put("nvoosregulares", "numvoosregulares");
+        m.put("qtdevoosregulares", "numvoosregulares");
+        m.put("voos_regulares", "numvoosregulares");
+
+        // voos irregulares
+        m.put("numvoosirregulares", "numvoosirregulares");
+        m.put("voosirregulares", "numvoosirregulares");
+        m.put("nvoosirregulares", "numvoosirregulares");
+        m.put("qtdevoosirregulares", "numvoosirregulares");
+        m.put("voos_irregulares", "numvoosirregulares");
+
+        // embarques
+        m.put("numembarques", "numembarques");
+        m.put("embarques", "numembarques");
+        m.put("qtdembarques", "numembarques");
+
+        // desembarques
+        m.put("numdesembarques", "numdesembarques");
+        m.put("desembarques", "numdesembarques");
+        m.put("qtddesembarques", "numdesembarques");
+
+        // total
+        m.put("numvoostotais", "numvoostotais");
+        m.put("voostotais", "numvoostotais");
+        m.put("totaldevoos", "numvoostotais");
+        m.put("total", "numvoostotais");
+        m.put("voos_total", "numvoostotais");
+
+        ALIASES = Collections.unmodifiableMap(m);
+    }
+
+    private static final int DEFAULT_BATCH = 1000;
+    private static final int MAX_SCAN_HEADER_ROWS = 30;
 
     public void processar(java.nio.file.Path caminhoXlsx,
                           int batchSize,
-                          java.util.function.Consumer<List<Voo>> loteHandler,
+                          Consumer<List<Voo>> loteHandler,
                           LogService logService) throws Exception {
 
+        if (batchSize <= 0) batchSize = DEFAULT_BATCH;
+        Objects.requireNonNull(caminhoXlsx, "caminhoXlsx nulo");
+        Objects.requireNonNull(loteHandler, "loteHandler nulo");
+        Objects.requireNonNull(logService, "logService nulo");
+
         try (java.io.InputStream in = java.nio.file.Files.newInputStream(caminhoXlsx);
-             Workbook wb = new org.apache.poi.xssf.usermodel.XSSFWorkbook(in)) {
+             Workbook wb = new XSSFWorkbook(in)) {
 
-            Sheet sheet = wb.getSheetAt(0);
-            if (sheet == null) throw new IllegalStateException("Aba 0 inexistente no XLSX.");
+            // 1) Descobrir a aba que contém o cabeçalho válido
+            Sheet sheet = localizarAbaComCabecalho(wb);
+            if (sheet == null) {
+                throw new IllegalStateException("Não encontrei nenhuma aba com o cabeçalho esperado.");
+            }
 
-            DataFormatter fmt = new DataFormatter(new java.util.Locale("pt","BR"));
+            DataFormatter fmt = new DataFormatter(new Locale("pt", "BR"));
 
-            // 👉 Achar a linha do cabeçalho varrendo as primeiras 30 linhas
-            int headerRowNum = localizarLinhaCabecalho(sheet, fmt, COLS_ESPERADAS, 30);
+            // 2) Descobrir a linha do cabeçalho naquela aba
+            int headerRowNum = localizarLinhaCabecalho(sheet, fmt, COLS_ESPERADAS, MAX_SCAN_HEADER_ROWS);
             Row header = sheet.getRow(headerRowNum);
 
-            Map<String,Integer> colIndex = mapearCabecalho(header, fmt);
-            validarCabecalho(colIndex); // garante todas as esperadas
+            // 3) Mapear colunas -> índices (já resolvendo sinônimos)
+            Map<String, Integer> colIndex = mapearCabecalho(header, fmt);
 
-            List<Voo> buffer = new ArrayList<>(Math.max(1, batchSize));
+            // 4) Garantir que todas as esperadas estão presentes
+            validarCabecalho(colIndex);
+
+            // 5) Log curto do mapeamento (cabendo em VARCHAR(200))
+            String mapeamentoCurto = mapeamentoCurto(colIndex);
+            logService.registrar("INFO",
+                    String.format("Usando aba '%s', header na linha %d. Mapeamento: %s",
+                            sheet.getSheetName(), headerRowNum, mapeamentoCurto));
+
+            // 6) Ler linhas e emitir em lotes
+            List<Voo> buffer = new ArrayList<>(batchSize);
             int last = sheet.getLastRowNum();
 
             for (int r = headerRowNum + 1; r <= last; r++) {
@@ -58,40 +135,63 @@ public class LeitorExcell {
                     buffer.clear();
                 }
             }
-            if (!buffer.isEmpty()) loteHandler.accept(buffer);
-
+            if (!buffer.isEmpty()) {
+                loteHandler.accept(buffer);
+            }
         }
     }
 
-    /** Procura a primeira linha que contenha todas as colunas esperadas (normalizadas). */
+    /** Encontra a primeira aba que contenha uma linha com todas as colunas esperadas. */
+    private Sheet localizarAbaComCabecalho(Workbook wb) {
+        DataFormatter fmt = new DataFormatter(new Locale("pt", "BR"));
+        for (int i = 0; i < wb.getNumberOfSheets(); i++) {
+            Sheet s = wb.getSheetAt(i);
+            try {
+                localizarLinhaCabecalho(s, fmt, COLS_ESPERADAS, MAX_SCAN_HEADER_ROWS);
+                return s; // achou uma aba válida
+            } catch (Exception ignore) {
+                // tenta próxima
+            }
+        }
+        return null;
+    }
+
+    /** Procura a primeira linha que contenha todas as colunas esperadas (normalizadas/sinônimos resolvidos). */
     private int localizarLinhaCabecalho(Sheet sheet, DataFormatter fmt,
                                         Set<String> esperadas, int maxScan) {
         int maxRow = Math.min(sheet.getLastRowNum(), maxScan);
         for (int r = 0; r <= maxRow; r++) {
             Row row = sheet.getRow(r);
             if (row == null) continue;
-            Map<String,Integer> idx = mapearCabecalho(row, fmt);
+            Map<String, Integer> idx = mapearCabecalho(row, fmt);
             if (idx.keySet().containsAll(esperadas)) {
                 return r;
             }
         }
-        throw new IllegalStateException("Não encontrei linha de cabeçalho nas primeiras " +
-                (maxScan + 1) + " linhas. Verifique o arquivo.");
+        throw new IllegalStateException("Não encontrei linha de cabeçalho nas primeiras " + (maxScan + 1) + " linhas.");
     }
 
-    private Map<String,Integer> mapearCabecalho(Row header, DataFormatter fmt) {
-        Map<String,Integer> map = new HashMap<>();
+    /** Mapeia as colunas: resolve sinônimos e devolve chaves canônicas -> índice. */
+    private Map<String, Integer> mapearCabecalho(Row header, DataFormatter fmt) {
+        Map<String, Integer> map = new HashMap<>();
         short lastCell = header.getLastCellNum();
         for (int c = 0; c < lastCell; c++) {
             Cell cell = header.getCell(c);
             if (cell == null) continue;
-            String nome = normalizar(fmt.formatCellValue(cell));
-            if (!nome.isBlank()) map.put(nome, c);
+            String bruto = fmt.formatCellValue(cell);
+            if (bruto == null || bruto.trim().isEmpty()) continue;
+
+            String norm = normalizar(bruto);
+            String canonico = ALIASES.getOrDefault(norm, norm); // resolve sinônimo se houver
+            if (COLS_ESPERADAS.contains(canonico)) {
+                // só mapeia o que interessa ao domínio; primeira ocorrência prevalece
+                map.putIfAbsent(canonico, c);
+            }
         }
         return map;
     }
 
-    private void validarCabecalho(Map<String,Integer> colIndex) {
+    private void validarCabecalho(Map<String, Integer> colIndex) {
         List<String> faltantes = new ArrayList<>();
         for (String col : COLS_ESPERADAS) {
             if (!colIndex.containsKey(col)) faltantes.add(col);
@@ -115,26 +215,43 @@ public class LeitorExcell {
     private String getString(Row row, Integer col, DataFormatter fmt) {
         if (col == null) return null;
         String v = fmt.formatCellValue(row.getCell(col));
-        return v == null ? null : v.trim();
+        return (v == null) ? null : v.trim();
     }
 
     private Integer getInt(Row row, Integer col, DataFormatter fmt) {
         if (col == null) return null;
         Cell cell = row.getCell(col);
         if (cell == null) return null;
+
         if (cell.getCellType() == CellType.NUMERIC) {
+            // Garante inteiro mesmo quando vier como double
             return (int) Math.round(cell.getNumericCellValue());
         }
+        // Se vier como texto: remove tudo que não for dígito/sinal
         String s = fmt.formatCellValue(cell);
         if (s == null || s.isBlank()) return null;
-        s = s.replaceAll("[^0-9-]", "");
+        s = s.replaceAll("[^0-9\\-]", "");
         return s.isBlank() ? null : Integer.parseInt(s);
     }
 
+    /** Normaliza rótulos: sem acentos, minúsculas, sem espaços/pontuação. */
     private String normalizar(String s) {
         if (s == null) return "";
         String semAcento = Normalizer.normalize(s, Normalizer.Form.NFD)
                 .replaceAll("\\p{InCombiningDiacriticalMarks}+", "");
-        return semAcento.toLowerCase(java.util.Locale.ROOT).replaceAll("\\s+", "");
+        return semAcento.toLowerCase(Locale.ROOT).replaceAll("[^a-z0-9]", "");
+    }
+
+    /** Gera um texto curto com o mapeamento (para caber no VARCHAR(200) do registroLogs). */
+    private String mapeamentoCurto(Map<String, Integer> colIndex) {
+        // Ex.: estado:0, mes:1, ano:2, ...
+        List<String> pares = new ArrayList<>();
+        for (String k : COLS_ESPERADAS) {
+            Integer idx = colIndex.get(k);
+            if (idx != null) pares.add(k + ":" + idx);
+        }
+        String out = String.join(", ", pares);
+        // garante <= 180 chars para sobrar margem para prefixos do LogService
+        return out.length() > 180 ? out.substring(0, 180) + "..." : out;
     }
 }
